[package]
name = "dechrome"
version = "0.9.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winreg = "~0.50.0"
is_elevated = "~0.1.2"
ureq  = { version = "~2.7.1", features = ["tls"] }

[profile.release-full]
inherits = "release"
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
